# medical-ai-assistant

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  dvc.yaml  pyproject.toml  render.yaml  requirements-serve.txt  requirements.txt
configs/: data.yaml  evaluation_manifest.yaml  prompt.yaml  rag.yaml  serving.yaml
configs/training/: qlora_r16.yaml
docs/: architecture.md  medical-ai-assistant-plan.md  rag-implementation-plan.md  snazzy-hugging-dream.md
evaluation_sets/: README.md  eval_mcq_labeled.jsonl
governance/: knowledge_sources_license.md  model_card.md  responsible_ai.md  runbook.md
governance/adr/: 0001-rag-vs-finetune-facts.md  0002-chunking-512-overlap-64.md  0003-embedding-bge-vs-e5.md  0004-serving-vllm-vs-tgi.md  0005-base-model-vietnamese.md  README.md
notebooks/: EDA.ipynb  embed_colab.ipynb  error_analysis.ipynb  model_server_colab.ipynb
prompts/: fewshot_v1.jsonl  system_prompt_v1.txt
reports/: eval_report.md  failure_analysis.md  retrieval_report.md  safety_scorecard.md
scripts/: build_data.sh  evaluate.sh  serve.sh  train.sh
scripts/dev/: check_kbfetch.py  check_qdrant.py  check_qdrant_both.py  check_qdrant_env.py  diag_encoding.py  healthcheck.py  make_retrieval_goldset.py  verify_kb_clean.py
src/data/: __init__.py  clean_dedup.py  decontaminate.py  ingest.py  mcq.py  pii_scrub.py  regate.py  split.py  to_parquet.py  translate.py  validate.py
src/evaluation/: __init__.py  benchmark.py  failure_attribution.py  harness.py  metric_validation.py  (+3 more)
web/: chat.js  index.html  style.css
(+61 files in other folders)
